; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Account.c_PolicyStrToId.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Account.c_PolicyStrToId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INFINITE = common dso_local global i64 0, align 8
@NUM_POLICY_ITEM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @PolicyStrToId(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @INFINITE, align 8
  store i64 %8, i64* %2, align 8
  br label %28

9:                                                ; preds = %1
  store i64 0, i64* %4, align 8
  br label %10

10:                                               ; preds = %23, %9
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* @NUM_POLICY_ITEM, align 8
  %13 = icmp slt i64 %11, %12
  br i1 %13, label %14, label %26

14:                                               ; preds = %10
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @PolicyIdToStr(i64 %15)
  %17 = load i8*, i8** %3, align 8
  %18 = call i64 @StartWith(i32 %16, i8* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i64, i64* %4, align 8
  store i64 %21, i64* %2, align 8
  br label %28

22:                                               ; preds = %14
  br label %23

23:                                               ; preds = %22
  %24 = load i64, i64* %4, align 8
  %25 = add nsw i64 %24, 1
  store i64 %25, i64* %4, align 8
  br label %10

26:                                               ; preds = %10
  %27 = load i64, i64* @INFINITE, align 8
  store i64 %27, i64* %2, align 8
  br label %28

28:                                               ; preds = %26, %20, %7
  %29 = load i64, i64* %2, align 8
  ret i64 %29
}

declare dso_local i64 @StartWith(i32, i8*) #1

declare dso_local i32 @PolicyIdToStr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
